minor visibility fix

--- a/style.css
+++ b/style.css
@@ -45,10 +45,6 @@
     margin-top: -20;
 }
 
-.hidden {
-    display: none;
-}
-
 #bestScore {
     font-size: 30px;
 }
